[gd_scene load_steps=10 format=2]

[ext_resource path="res://player/level-complete.ogg" type="AudioStream" id=1]
[ext_resource path="res://endscene/music-ending-credits.ogg" type="AudioStream" id=2]
[ext_resource path="res://endscene/dark.png" type="Texture" id=3]
[ext_resource path="res://enemy/monster-alert.ogg" type="AudioStream" id=4]
[ext_resource path="res://endscene/ending.png" type="Texture" id=5]
[ext_resource path="res://enemy/monster-dealert.ogg" type="AudioStream" id=6]
[ext_resource path="res://pressure_plate/release.ogg" type="AudioStream" id=7]
[ext_resource path="res://endscene/endscene.gd" type="Script" id=8]
[ext_resource path="res://main_menu/main_menu.tscn" type="PackedScene" id=9]

[node name="Node2D" type="Node2D"]
script = ExtResource( 8 )
main_menu = ExtResource( 9 )
switch_unpress = ExtResource( 7 )
monster_dealert = ExtResource( 6 )
monster_alert = ExtResource( 4 )
level_complete = ExtResource( 1 )
credit_sound = ExtResource( 2 )

[node name="Ending" type="Sprite" parent="."]
centered = false

[node name="EndCreditsPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 5 )
centered = false

[node name="Dark1" type="Sprite" parent="."]
position = Vector2( 258.25, 185 )
scale = Vector2( 7.64844, 5.5625 )
texture = ExtResource( 3 )

[node name="Dark2" type="Sprite" parent="."]
position = Vector2( 755.563, 88.5 )
scale = Vector2( 7.60742, 2.32812 )
texture = ExtResource( 3 )

[node name="Dark3" type="Sprite" parent="."]
position = Vector2( 757, 267.5 )
scale = Vector2( 7.6875, 2.95313 )
texture = ExtResource( 3 )

[node name="Dark4" type="Sprite" parent="."]
position = Vector2( 119, 498.688 )
scale = Vector2( 3.03125, 3.99023 )
texture = ExtResource( 3 )

[node name="Dark5" type="Sprite" parent="."]
position = Vector2( 454, 497 )
scale = Vector2( 7.03125, 4.03125 )
texture = ExtResource( 3 )

[node name="Dark6" type="Sprite" parent="."]
position = Vector2( 846.5, 501 )
scale = Vector2( 4.92188, 4.09375 )
texture = ExtResource( 3 )

[node name="SoundPlayer" type="AudioStreamPlayer" parent="."]
